feat: added icon for windows

--- a/wasty/wasty/AddTransaction.resx
+++ b/wasty/wasty/AddTransaction.resx
@@ -2391,4 +2391,80 @@
         6MGUrYcI39XFvxmq5s+Rh31TkcG2XftrBYNBBOxR5/hc+naIf6wXCOZof//Z
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAArVBQALVMWACxUFQ4sVBUTLFMUCSxU
+        FQUsUxUKLFMUCCxTFAwrUxUGLFMUByxUFQwsVBUSK1QUBytTFQYrUxQKLFMUDCxUFAkrVBQGLFQUAyxU
+        FAYsVBQILFQUCCxUFAYsVBQCLFQUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACtUFAAqVRMBLFQVSixU
+        FVosUxVSLFMVVCtTFUMsVBVNLFQVWCtTFVAsUxQcLFQVKSxUFVQsVBVSK1MVUitUFUosUxVZLFQVTyxU
+        FUosVBUpLFMVUixUFVAsVBRFLFQUQyxUFBAsVBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAK1QUACtU
+        EwEsVBVMLFQVVyxUFTgsVBVOK1MVRyxTFUgsUxVLK1MVVyxTFRUsVBU+LFQVOCxUFTssVBVHLFQVUCxU
+        FTwsVBVfLFQVWSxUFEgsVBVLLFQVPitUFD8sVBRDLFQUECxUFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAArVBQALVQVACxUFQ4sUxUQLFMVBSxTFQksVBUKLFMVByxTFQkrUxUIK1MVBixUFQssUxUQLFQVByxU
+        FQgsVBULLFQVBSxTFQ0sUxQTLFMVDCtUFQgsVBUHK1QUBitUFAYrVBQCK1QUAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAsVBUALFQVECxUFSksVRQBK1MVASxUFSosVBUOL1YVACxUFSQsVBQKLFQUACxU
+        FQAsVBUaLFQVGCxUFR8sVBVKLFQVTyxUFSAuVhQALFQVACxUFRssVBUTLFQVACxUFAAsVBYALFQVISxU
+        FQ0sVBUAAAAAAAAAAAAAAAAAKlQUACxUFQAsVBVZLFQVtSxUFRAsVBUULFQVuSxUFVIsVBUALFQVdSxU
+        FVArUxUMK1MVECxUFYEsVBVDLFQVYCxUFWssVBVnLFQVlSxUFSAsVBUALFQVaSxUFUwsVBUALFQUACtU
+        GQAsVBV+LFQVMixUFQAAAAAAAAAAAAAAAAAsVBUALFQVBSxUFYAsVBWVLFQVOSxUFUAsVBWVLFQVfCFU
+        HQAsVBU2LFQVvixUFYssVBWdLFQVpyxUFQwsVhsALFQUBCxUFSIsVBWcLFQVNSxUFQAsVBVuLFQVTyxU
+        FQAsUxQAGV9QACxUFYYsVBU2LFQVAAAAAAAAAAAAAAAAACxUFQAsVBUjLFQVhCxUFUYsVBVvLFQVcyxU
+        FUMsVBWGLFQVHixTFQYsVBWSLFQVOixUFXEsVBVgLFQVACxUFTssVBWPLFQVlCxUFV0rVBUHLFQVACxU
+        FW4sVBVPLFQVACxUFQAsVBUgLFQVtSxUFW8qUxMBLFQUAAAAAAAAAAAALFQVACxUFVYsVBVkLFQVESxU
+        FZwsVBWZLFQVDixUFWosVBVQLFQVACxUFVAsVBWFLFQVkixUFR0sVBUHLFQVmixUFUErUxUFLFUUAChK
+        GgAsVBUALFQVbixUFU8sVBUALFQVCSxUFYYsVBVXLFQViixUFUEsVBUAK1EVACtUFAArVBQBLFQVfixU
+        FTIsVBUALFQViyxUFYQsVBUALFQVNyxUFXotVRYALFQVEixUFbMsVBV6LFQXACtTFQIsVBVzLFQVgSxU
+        FWMsVBVfLFQVLSxUFWgsVBWoLFQVmCxUFV8sVBVkLFQVeitUFAIsVBUsLFQVkCxUFRAsVBUAK1QUACxU
+        FQIsVBUjLFQUByxUFQAsVBUaLFQVGSxUFQAsVBUILFQVIitUFAEnUxEALFQVJytTExYrUxQAIEcEAB1D
+        AwklTQo6KFAOSitTEywsVBUZLFQVQyxUFUQsVBVELFQVPyxUFSssVBURLFQVACtUFQEsVBUkLFQVCSxU
+        FQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKXL3ADE5v8Ak73JJpK7
+        xz+Su8c+k7zJPZjC0zuUvcEyjLGVB4yylwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUvcsAk73LAJO9
+        yyyTvcvRk73L9pO9y/WTvcv1krzH9Yatm++ApYJmg6mNAIClgwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJO9
+        ywCTvcsRk73LsJO9y/+Tvcv/k73L/5O9y/+Ksqn/gKaF/4CmhOKApoQ7gKaEAH+lggAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADY3+cA2eDoANjf
+        5wCUvcsAk7zKA5O9y4GTvcv8k73L/5O9y/+Tvcz/jba2/4Goif+ApoT/gaeF/4GnhsGEq4obgqiGADtb
+        JwA8WyYAPVkmAD5ZJgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANbe
+        6ADW3ugO1t7oa9jf6YCxzNiSk73L7pO9y/+Tvcv/k73L/5O9y9mFrJa6gKaE/3yifv9ihlz/XYBV/k5w
+        QbI5WiZ+OlsnfjpbJys6WycAOlckAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA1t7oANPd5wLX3+l3y9nj+p/D0P+Svcv/k73L/5O9y/+Svcvwk73MVYClgiGApYPKXoFX/zpb
+        J/85Wib/Olsn/zpbJv85Wia4OlsnFjpbJwA2ViMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAsMvXALLM2B+gw9HYk73L/5O9y/+Tvcv/lL3L/6fH07/D1OAPaIZoAFF0
+        Rnc/YC3/Olsm/zpbJ/85Wib/Q2Qy+lp9UltTdkkAZ4xkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAJK8ywCTvMsDkr3LgJK9y/yTvcv/k73L/5K9y/+mx9P/0dvm9Nvi
+        7WA4WSQoOVom0jpbJ/86Wyf/Olsn/z5fLP9ojGT/gaeFwICmhBqApoQAdpV2AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkrzKAJK8yguTvctZkrzKaJ7C0H24z9vqu9Hc/8zZ
+        5P/X3+n/zNbc4E5sQMU5Wib/Olsn/zpbJ/86Wyf8RGY0on6jgWaApoRngKWEI4CmhACAmYAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADj5O0A9u31Adjf
+        6XbX3+j6197o/9Xe5/+Ln4v/PV0q/zpbJ/86Wyf/Olsn/zpbJ7g6WycVOlsnAP///wD///8A////AP//
+        /wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADW3ugA1t7oDdbe6KXY3+r/prat/0RjM/85Wib/Olsn/zpbJ/86WyfcOlsnMjpbJwA4WCYAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADW3ugA3eTxJb7KyshadU7yOlsn8DxcKfA8XCnxO1wp6TpbJ1w7XSgAOVonAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAANbe5wD///8AhJmCIEpoOjdJZzk2SWg6NkloOjZHZjcuP18tBj9f
+        LQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////////+AAAD/AAAA/wAAAP+AAAD//////gTAzn4EAE58BA
+        hOfAAQTDwCAcg4kiAAGJEwAR//gP///wD///4Af//8AD//4AAH/+AAB//wCA//4AAH/+AAB//8AD///g
+        B///8A////gP//////////////////////8=
+</value>
+  </data>
 </root>
