--- a/wasty/wasty/HomePage.resx
+++ b/wasty/wasty/HomePage.resx
@@ -58,6 +58,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.3, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5goeBjcquY5/YgAAAmRJREFU
+        eF7tmsFOFEEQhpeD8A5o4nsYMB6JxqO8hgkHIJ4MiRHeQK/ePHvF8BKcuOPZAB48tX/R3yRIoqnu2d3p
+        XupL/oTq6b+mqmYG2MnOgiAIgmD5pJSeS5+lT9I2y6uPmt2Uvkj3+SY9ZdvqoebWpX3pWjJupCNkPxt2
+        zPasY1sN1NAL6Vwa+Otq6+f7d8WFtMPhflETRY3p2H8H1Q0q+pH0VrqSjF/Se2mDLf9Ee6q9TaBC53IV
+        5enrsVBxCylYOdp+LFTMwm9Z5WrzsVABS706yt3GY6GTTlqIzjXNY6GTNHMr6pzLrUWJm/xlpBoWezcq
+        WRd/jlTTfC+QzGvSntTN/+lWGzXe/bxhPayxxY9M7ywDfJWecKh5rFZqHjjkkB+ZfmRvesNSd6j23dxC
+        umTJD0aj/PZpBKs9t5ASS37wlRsbgzZiAIR+8MUACLuFNmIAhH7wxQAIu4U2YgCEfvDFAAi7hTZiAIR+
+        8MUACLuFNmIAhH7wxQAIq5DdXlGdSMPLlRIupWNp1Cu420yC0A++sQOwBsZyTLoqyDHZAOwqGs9YciPP
+        VrZWvM66AzkmG8AthMVgn6YGfDEAwipIEQMgLAZ7DICwClLEAAj94IsBEFZBihgAYTHYYwCEVZAiBkDo
+        R57hSwabLBWDf7IByPo4Z0g/WfIj01n2pgOWisE/5QAOc4Z0ypIfmV5nb/otHUhFd4L2b5tZVH+aM29O
+        kbZYcqH99r0mq9lqN15yqAwZP2T/KD6Srhh55/E+4Yh0dSjBK+m7NHwfz8voNzrmJcdwJ3ixWk+luisf
+        BEEQPAhmsz/BC3/m4VSQ1wAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -85,23 +102,6 @@
         XYnuQ+HYEfgMnWjlpiA4LQwQ9Kj7+V7RI7QH0BwrU4REbT+c7BV6PNa36tD7Qz0J/sZtFdGFzg6kZb4d
         nyOo6LNIaF3OQ6jVSo4UpA+jO73AEvsI+gy6Z9FvoE9HR6P9LVUOgxejun883StbrP3hQMGTkO76Yv98
         vhd0Dt+F7kCzrPUBGRv7F+j2xmhbBS30AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5goeBjcquY5/YgAAAmRJREFU
-        eF7tmsFOFEEQhpeD8A5o4nsYMB6JxqO8hgkHIJ4MiRHeQK/ePHvF8BKcuOPZAB48tX/R3yRIoqnu2d3p
-        XupL/oTq6b+mqmYG2MnOgiAIgmD5pJSeS5+lT9I2y6uPmt2Uvkj3+SY9ZdvqoebWpX3pWjJupCNkPxt2
-        zPasY1sN1NAL6Vwa+Otq6+f7d8WFtMPhflETRY3p2H8H1Q0q+pH0VrqSjF/Se2mDLf9Ee6q9TaBC53IV
-        5enrsVBxCylYOdp+LFTMwm9Z5WrzsVABS706yt3GY6GTTlqIzjXNY6GTNHMr6pzLrUWJm/xlpBoWezcq
-        WRd/jlTTfC+QzGvSntTN/+lWGzXe/bxhPayxxY9M7ywDfJWecKh5rFZqHjjkkB+ZfmRvesNSd6j23dxC
-        umTJD0aj/PZpBKs9t5ASS37wlRsbgzZiAIR+8MUACLuFNmIAhH7wxQAIu4U2YgCEfvDFAAi7hTZiAIR+
-        8MUACLuFNmIAhH7wxQAIq5DdXlGdSMPLlRIupWNp1Cu420yC0A++sQOwBsZyTLoqyDHZAOwqGs9YciPP
-        VrZWvM66AzkmG8AthMVgn6YGfDEAwipIEQMgLAZ7DICwClLEAAj94IsBEFZBihgAYTHYYwCEVZAiBkDo
-        R57hSwabLBWDf7IByPo4Z0g/WfIj01n2pgOWisE/5QAOc4Z0ypIfmV5nb/otHUhFd4L2b5tZVH+aM29O
-        kbZYcqH99r0mq9lqN15yqAwZP2T/KD6Srhh55/E+4Yh0dSjBK+m7NHwfz8voNzrmJcdwJ3ixWk+luisf
-        BEEQPAhmsz/BC3/m4VSQ1wAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -2701,7 +2701,7 @@
   <data name="pbLogo.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAANAAAADQCAYAAAB2pO90AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAADR0RVh0Q29tbWVudAB4cjpkOkRBRlNlTWI0dnBJOjE3LGo6NDE1OTU4NDkyMDks
+        vQAADr0BR/uQrQAAADR0RVh0Q29tbWVudAB4cjpkOkRBRlNlTWI0dnBJOjE3LGo6NDE1OTU4NDkyMDks
         dDoyMjExMjAyMwVWjPMAAB4ySURBVHhe7Z0LmBxVlcczPlfXVcxMJui6i+tiQqZqiBoVE9DAqnwqCGa6
         ZxMSwAAuugosq0gUEyYkEVGIJIQFiSgIJJEAAmIQeUVRAgbICxJYQhIUSCaIZEXDO+n9n9une+pxq7ur
         urumZvL/fd/5Zrrus+49p+qee6tuDSGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQ
@@ -2832,6 +2832,82 @@
         qUo+C1c/coW3razbCMzQabrKj9Fg+GF9srqGtBFPNIeBgYhCyydaIh8MDdY9mpbQkCliCFV+6t2GLU1U
         PlHUWmdbvGpl1dJ3hBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBC
         CCGkEkOG/D+szs4m0+ZLowAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAArVBQALVMWACxUFQ4sVBUTLFMUCSxU
+        FQUsUxUKLFMUCCxTFAwrUxUGLFMUByxUFQwsVBUSK1QUBytTFQYrUxQKLFMUDCxUFAkrVBQGLFQUAyxU
+        FAYsVBQILFQUCCxUFAYsVBQCLFQUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACtUFAAqVRMBLFQVSixU
+        FVosUxVSLFMVVCtTFUMsVBVNLFQVWCtTFVAsUxQcLFQVKSxUFVQsVBVSK1MVUitUFUosUxVZLFQVTyxU
+        FUosVBUpLFMVUixUFVAsVBRFLFQUQyxUFBAsVBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAK1QUACtU
+        EwEsVBVMLFQVVyxUFTgsVBVOK1MVRyxTFUgsUxVLK1MVVyxTFRUsVBU+LFQVOCxUFTssVBVHLFQVUCxU
+        FTwsVBVfLFQVWSxUFEgsVBVLLFQVPitUFD8sVBRDLFQUECxUFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAArVBQALVQVACxUFQ4sUxUQLFMVBSxTFQksVBUKLFMVByxTFQkrUxUIK1MVBixUFQssUxUQLFQVByxU
+        FQgsVBULLFQVBSxTFQ0sUxQTLFMVDCtUFQgsVBUHK1QUBitUFAYrVBQCK1QUAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAsVBUALFQVECxUFSksVRQBK1MVASxUFSosVBUOL1YVACxUFSQsVBQKLFQUACxU
+        FQAsVBUaLFQVGCxUFR8sVBVKLFQVTyxUFSAuVhQALFQVACxUFRssVBUTLFQVACxUFAAsVBYALFQVISxU
+        FQ0sVBUAAAAAAAAAAAAAAAAAKlQUACxUFQAsVBVZLFQVtSxUFRAsVBUULFQVuSxUFVIsVBUALFQVdSxU
+        FVArUxUMK1MVECxUFYEsVBVDLFQVYCxUFWssVBVnLFQVlSxUFSAsVBUALFQVaSxUFUwsVBUALFQUACtU
+        GQAsVBV+LFQVMixUFQAAAAAAAAAAAAAAAAAsVBUALFQVBSxUFYAsVBWVLFQVOSxUFUAsVBWVLFQVfCFU
+        HQAsVBU2LFQVvixUFYssVBWdLFQVpyxUFQwsVhsALFQUBCxUFSIsVBWcLFQVNSxUFQAsVBVuLFQVTyxU
+        FQAsUxQAGV9QACxUFYYsVBU2LFQVAAAAAAAAAAAAAAAAACxUFQAsVBUjLFQVhCxUFUYsVBVvLFQVcyxU
+        FUMsVBWGLFQVHixTFQYsVBWSLFQVOixUFXEsVBVgLFQVACxUFTssVBWPLFQVlCxUFV0rVBUHLFQVACxU
+        FW4sVBVPLFQVACxUFQAsVBUgLFQVtSxUFW8qUxMBLFQUAAAAAAAAAAAALFQVACxUFVYsVBVkLFQVESxU
+        FZwsVBWZLFQVDixUFWosVBVQLFQVACxUFVAsVBWFLFQVkixUFR0sVBUHLFQVmixUFUErUxUFLFUUAChK
+        GgAsVBUALFQVbixUFU8sVBUALFQVCSxUFYYsVBVXLFQViixUFUEsVBUAK1EVACtUFAArVBQBLFQVfixU
+        FTIsVBUALFQViyxUFYQsVBUALFQVNyxUFXotVRYALFQVEixUFbMsVBV6LFQXACtTFQIsVBVzLFQVgSxU
+        FWMsVBVfLFQVLSxUFWgsVBWoLFQVmCxUFV8sVBVkLFQVeitUFAIsVBUsLFQVkCxUFRAsVBUAK1QUACxU
+        FQIsVBUjLFQUByxUFQAsVBUaLFQVGSxUFQAsVBUILFQVIitUFAEnUxEALFQVJytTExYrUxQAIEcEAB1D
+        AwklTQo6KFAOSitTEywsVBUZLFQVQyxUFUQsVBVELFQVPyxUFSssVBURLFQVACtUFQEsVBUkLFQVCSxU
+        FQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKXL3ADE5v8Ak73JJpK7
+        xz+Su8c+k7zJPZjC0zuUvcEyjLGVB4yylwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUvcsAk73LAJO9
+        yyyTvcvRk73L9pO9y/WTvcv1krzH9Yatm++ApYJmg6mNAIClgwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJO9
+        ywCTvcsRk73LsJO9y/+Tvcv/k73L/5O9y/+Ksqn/gKaF/4CmhOKApoQ7gKaEAH+lggAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADY3+cA2eDoANjf
+        5wCUvcsAk7zKA5O9y4GTvcv8k73L/5O9y/+Tvcz/jba2/4Goif+ApoT/gaeF/4GnhsGEq4obgqiGADtb
+        JwA8WyYAPVkmAD5ZJgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANbe
+        6ADW3ugO1t7oa9jf6YCxzNiSk73L7pO9y/+Tvcv/k73L/5O9y9mFrJa6gKaE/3yifv9ihlz/XYBV/k5w
+        QbI5WiZ+OlsnfjpbJys6WycAOlckAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA1t7oANPd5wLX3+l3y9nj+p/D0P+Svcv/k73L/5O9y/+Svcvwk73MVYClgiGApYPKXoFX/zpb
+        J/85Wib/Olsn/zpbJv85Wia4OlsnFjpbJwA2ViMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAsMvXALLM2B+gw9HYk73L/5O9y/+Tvcv/lL3L/6fH07/D1OAPaIZoAFF0
+        Rnc/YC3/Olsm/zpbJ/85Wib/Q2Qy+lp9UltTdkkAZ4xkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAJK8ywCTvMsDkr3LgJK9y/yTvcv/k73L/5K9y/+mx9P/0dvm9Nvi
+        7WA4WSQoOVom0jpbJ/86Wyf/Olsn/z5fLP9ojGT/gaeFwICmhBqApoQAdpV2AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkrzKAJK8yguTvctZkrzKaJ7C0H24z9vqu9Hc/8zZ
+        5P/X3+n/zNbc4E5sQMU5Wib/Olsn/zpbJ/86Wyf8RGY0on6jgWaApoRngKWEI4CmhACAmYAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADj5O0A9u31Adjf
+        6XbX3+j6197o/9Xe5/+Ln4v/PV0q/zpbJ/86Wyf/Olsn/zpbJ7g6WycVOlsnAP///wD///8A////AP//
+        /wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADW3ugA1t7oDdbe6KXY3+r/prat/0RjM/85Wib/Olsn/zpbJ/86WyfcOlsnMjpbJwA4WCYAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADW3ugA3eTxJb7KyshadU7yOlsn8DxcKfA8XCnxO1wp6TpbJ1w7XSgAOVonAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAANbe5wD///8AhJmCIEpoOjdJZzk2SWg6NkloOjZHZjcuP18tBj9f
+        LQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////////+AAAD/AAAA/wAAAP+AAAD//////gTAzn4EAE58BA
+        hOfAAQTDwCAcg4kiAAGJEwAR//gP///wD///4Af//8AD//4AAH/+AAB//wCA//4AAH/+AAB//8AD///g
+        B///8A////gP//////////////////////8=
 </value>
   </data>
 </root>
